# series_statistics

./: .gitignore  README.md
curve_statistics/src/: curve_statistics.rs  lib.rs
series_statistics/: Cargo.toml
series_statistics/src/: curve_statistics.rs  lib.rs  series_statistics.rs
